# Systemai

./: .env.example  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  electron-builder.yml  eslint.config.mjs  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
systemai/backend/ai-orchestrator/: index.ts
systemai/backend/monitor-engine/: index.ts
systemai/backend/powershell-bridge/: index.ts
systemai/backend/repair-engine/: index.ts
systemai/backend/workflow-engine/: index.ts
systemai/database/migrations/: 001_init.sql
systemai/database/schema/: init.sql
systemai/docs/: architecture.md
systemai/electron/: db.ts  ipcHandlers.ts  main.ts  preload.ts
systemai/rust-core/: Cargo.toml
systemai/rust-core/event-bus/: README.md
systemai/rust-core/integrity/: README.md
systemai/rust-core/policy-engine/: README.md
systemai/rust-core/risk-scorer/: README.md
systemai/rust-core/sandbox/: README.md
systemai/rust-core/snapshot/: README.md
systemai/rust-core/src/: event_bus.rs  lib.rs  snapshot_manager.rs
systemai/rust-core/telemetry/: README.md
systemai/src/: App.tsx  main.tsx
systemai/src/components/: ErrorBoundary.tsx  Sidebar.tsx
systemai/src/hooks/: useBoot.ts
systemai/src/ipc/: channels.ts
systemai/src/pages/: ChatbotPage.tsx  DashboardPage.tsx  LogsPage.tsx  MonitorPage.tsx  OrchestratorPage.tsx  (+4 more)
systemai/tests/: app.test.tsx
(+18 files in other folders)
